<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_lg_all"
    tools:context=".Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="420dp"
                android:background="@drawable/bg_lg"
                android:contentDescription="@string/desc"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/p_login" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/bg_lg"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/smart"
                android:textColor="@color/black"
                android:textSize="33sp"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/textView" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/home"
                android:textColor="@color/black"
                android:textSize="80sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/sign1"
                android:textColor="@color/signin"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/sign2"
                android:textColor="@color/signin"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <EditText
                android:id="@+id/lg_pass"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginTop="16dp"
                android:autofillHints="@string/pass"
                android:background="@drawable/edit_text_border"
                android:drawableEnd="@drawable/ic_lock_icon"
                android:ems="10"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:paddingLeft="24sp"
                android:paddingRight="24sp"
                android:textColor="@color/orange"
                android:textColorHint="@color/swatch_5"
                app:layout_constraintEnd_toEndOf="@+id/lg_email"
                app:layout_constraintStart_toStartOf="@+id/lg_email"
                app:layout_constraintTop_toBottomOf="@+id/lg_email"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/lg_email"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginStart="52dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="52dp"
                android:autofillHints="@string/email"
                android:background="@drawable/edit_text_border"
                android:drawableEnd="@drawable/ic_email_icon"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:textColor="@color/orange"
                android:textColorHint="@color/swatch_5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <Button
                android:id="@+id/lg_btn"
                android:layout_width="0dp"
                android:layout_height="52sp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/orange"
                android:fontFamily="@font/roboto"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:iconPadding="0dp"
                app:layout_constraintEnd_toEndOf="@+id/lg_pass"
                app:layout_constraintStart_toStartOf="@+id/lg_pass"
                app:layout_constraintTop_toBottomOf="@+id/lg_pass" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/create_acc"
                android:textColor="@color/orange"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/no_acc"
                android:textColor="@color/swatch_9"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lg_btn" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>